--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>NCPO</title>
 
+    <link href="img/f3.jpg" rel="icon">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -18,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/one-page-wonder.min.css" rel="stylesheet">
+    <link href="css/one-page-wonder.css" rel="stylesheet">
 
   </head>
   <body>
@@ -29,11 +31,12 @@
         <a class="navbar-brand" href="javascript:moveTo(news)">NEWS</a>
         <a class="navbar-brand" href="javascript:moveTo(profile)">PROFILE</a>
         <a class="navbar-brand" href="javascript:moveTo(pics)">PICTURE</a>
+        <a class="navbar-brand" href="javascript:moveTo(vdo)">VIDEO</a>
         <a class="navbar-brand" href="javascript:moveTo(map)">MAP</a>
         <a class="navbar-brand" href="javascript:moveTo(graph)">GRAPH</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -50,8 +53,10 @@
     <header class="masthead text-center text-white">
       <div class="masthead-content">
         <div class="container">
-          <h1 class="masthead-heading mb-0">ผลงานของ</h1>
-          <h2 class="masthead-subheading mb-0">รัฐบาล คสช.</h2>
+          <h1 class="masthead-heading mb-0">คืนความสุขแด่ชาติ</h1>
+          <h2 class="masthead-subheading mb-0"></h2><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           <a href="javascript:moveToFirstTopic()" class="btn btn-primary btn-xl rounded-pill mt-5">ดูต่อไป</a>
         </div>
       </div>
@@ -322,7 +327,7 @@
         <div class="row align-items-center">
           <div class="col-lg-12">
             <div class="p-5">
-              <h2 class="display-6 text-center">เพลง คืนความสุขให้ประเทศไทย</h2>
+              <h2 class="display-6 text-center">ผลงานเพลง</h2>
               <iframe width="100%" height="500" src="https://www.youtube.com/embed/xLYSBVmoPhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
@@ -335,7 +340,7 @@
         <div class="row align-items-center">
           <div class="col-lg-12">
             <div class="p-5">
-              <h2 class="display-6 text-center">แผนที่มหาวิทยาลัยแม่โจ้</h2>
+              <h2 class="display-6 text-center">เส้นทางไปยังรอาคารัฐสภาใหม่</h2>
               <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d3920542.6970223635!2d97.56881220733875!3d16.340564172105672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x30da2334d4ce0385%3A0xf0346c6d9b330f0!2z4Lih4Lir4Liy4Lin4Li04LiX4Lii4Liy4Lil4Lix4Lii4LmB4Lih4LmI4LmC4LiI4LmJIOC4i-C4reC4oiDguJrguLLguIfguYDguILguJkg4LiV4Liz4Lia4LilIOC4q-C4meC4reC4h-C4q-C4suC4oyDguK3guLPguYDguKDguK0g4Liq4Lix4LiZ4LiX4Lij4Liy4LiiIOC5gOC4iuC4teC4ouC4h-C5g-C4q-C4oeC5iA!3m2!1d18.8983027!2d99.01331359999999!4m5!1s0x30e29bf1c8e071c1%3A0xda0e4c7bd949537a!2z4Lij4Lix4LiQ4Liq4Lig4Liy4LmD4Lir4Lih4LmIIOC4luC4meC4mSDguKrguLLguKHguYDguKrguJkg4LmB4LiC4Lin4LiHIOC4luC4meC4meC4meC4hOC4o-C5hOC4iuC4ouC4qOC4o-C4tSDguYDguILguJUg4LiU4Li44Liq4Li04LiVIOC4geC4o-C4uOC4h-C5gOC4l-C4nuC4oeC4q-C4suC4meC4hOC4ow!3m2!1d13.7960187!2d100.5173449!5e0!3m2!1sth!2sth!4v1543252855683" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
@@ -361,7 +366,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-black">
       <div class="container">
-        <p class="m-0 text-center text-white small">Maejo  Computer Science</p>
+        <p class="m-0 text-center text-white small">Anonymous Group.</p>
       </div>
       <!-- /.container -->
     </footer>
